--- a/pages/news.html
+++ b/pages/news.html
@@ -70,6 +70,15 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
+      [2021/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教" target="_blank">the teacher training completion certificate of information technology for the new engineering</a> that issued by Chongqing University
+    </li>
+    <li style="text-align:justify">
+      [2021/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教" target="_blank">the teacher training completion certificate of information technology for the new engineering</a> that issued by Chongqing University
+    </li>
+    <li style="text-align:justify">
+      [2021/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/重大2021年第一期技术经理人培训结业证书.pdf" target="_blank">the first technical manager training completion certificate issued by Chongqing University</a> 
+    </li>
+    <li style="text-align:justify">
       [2020/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教师培训证书_2020.09.19.pdf" target="_blank">the teacher training completion certificate of information technology for the new engineering</a> provided by China Software Industry Association Training Center
     </li>
     <li style="text-align:justify">
