--- a/pages/news.html
+++ b/pages/news.html
@@ -70,13 +70,16 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
-      [2021/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教" target="_blank">the teacher training completion certificate of information technology for the new engineering</a> that issued by Chongqing University
+      [2021/09/19]&nbsp;&nbsp; I successfully to be a teacher in the university with <a href="../certificate/" target="_blank">the Teacher Qualification Certificate (TQC)</a>
     </li>
     <li style="text-align:justify">
-      [2021/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教" target="_blank">the teacher training completion certificate of information technology for the new engineering</a> that issued by Chongqing University
+      [2021/05]&nbsp;&nbsp; I successfully obtained <a href="../certificate/重大2021年第一期技术经理人培训结业证书.pdf" target="_blank">the first technical manager training completion certificate issued by Chongqing University</a> 
     </li>
     <li style="text-align:justify">
-      [2021/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/重大2021年第一期技术经理人培训结业证书.pdf" target="_blank">the first technical manager training completion certificate issued by Chongqing University</a> 
+      [2021/03/03]&nbsp;&nbsp; I successfully passed the examination on <a href="../certificate/高等学校教师岗前培训.pdf" target="_blank">preparations for the teaching job in the university</a>, that is organized by Chongqing University
+    </li>
+    <li style="text-align:justify">
+      [2021/02]&nbsp;&nbsp; I am invited to become a Program Committee Member of <a href="http://139.159.245.147/" target="_blank">APWeb-WAIM 2021</a>.
     </li>
     <li style="text-align:justify">
       [2020/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教师培训证书_2020.09.19.pdf" target="_blank">the teacher training completion certificate of information technology for the new engineering</a> provided by China Software Industry Association Training Center
