--- a/pages/projects.html
+++ b/pages/projects.html
@@ -152,6 +152,9 @@
 <ul>
 <!-- <li>UNSW-Inkerz Collabration: Patented Pen Smart Application (IPSA) (Industrial Project) <a href="https://inkerz.com/"><strong><u>Inkerz Pty. Ltd.</strong></u></a>, Australia 2019 (main participant)</li> -->
 
+<li>Wuxia Knowledge Graph Construction: A Case Study on the Jinyong Kungfu Novels, Student Research Training Program (SRTP) in Chongqing University, 2021.06-2022.06 (supervisor)</li>
+
+
 <li>Food Knowledge Graph Construction towards Sichuan Cuisine, Fundamental Research Funds for the Center of Research and Development for Sichuan Cuisine (No. CC21G02), 2021.07-2023.07 (principal)</li>
 
 
