--- a/pages/news.html
+++ b/pages/news.html
@@ -70,10 +70,13 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
-      [2021/09/19]&nbsp;&nbsp; I successfully to be a teacher in the university with <a href="../certificate/" target="_blank">the Teacher Qualification Certificate (TQC)</a>.
+      [2021/06/19]&nbsp;&nbsp; I successfully to be a teacher in the university with <a href="../certificate/" target="_blank">the Teacher Qualification Certificate (TQC)</a>.
     </li>
     <li style="text-align:justify">
       [2021/05]&nbsp;&nbsp; I successfully obtained <a href="../certificate/重大2021年第一期技术经理人培训结业证书.pdf" target="_blank">the first technical manager training completion certificate issued by Chongqing University</a>. 
+    </li>
+    <li style="text-align:justify">
+      [2021/04/26]&nbsp;&nbsp; I am invited as the reviewer of <a href="https://hanspub.org/journal/HJDM.html" target="_blank">Hans Journal of Data Mining (HJDM)</a>. The letter of appointment is available <a href="../letter/HJDM_letter.pdf" target="_blank">here</a>.
     </li>
     <li style="text-align:justify">
       [2021/03/03]&nbsp;&nbsp; I successfully passed the examination on <a href="../certificate/高等学校教师岗前培训.pdf" target="_blank">preparations for the teaching job in the university</a>, that is organized by Chongqing University.
