--- a/pages/news.html
+++ b/pages/news.html
@@ -73,6 +73,9 @@
       [2021/06/19]&nbsp;&nbsp; I successfully to be a teacher in the university with <a href="../certificate/" target="_blank">the Teacher Qualification Certificate (TQC)</a>.
     </li>
     <li style="text-align:justify">
+      [2021/06/10]&nbsp;&nbsp; I am invited as the reviewer of <a href="http://jcip.cipsc.org.cn/CN/volumn/home.shtml" target="_blank">Journal of Chinese Information Processing (JCIP)</a>. 
+    </li>
+    <li style="text-align:justify">
       [2021/05]&nbsp;&nbsp; I successfully obtained <a href="../certificate/重大2021年第一期技术经理人培训结业证书.pdf" target="_blank">the first technical manager training completion certificate issued by Chongqing University</a>. 
     </li>
     <li style="text-align:justify">
