--- a/pages/publications.html
+++ b/pages/publications.html
@@ -245,4 +245,15 @@ Journal of University of Electronic Science and Technology of China (<a href="ht
 </ol>
 
 
+<hr>
+
+<h4>Patents</h4>
+<ol start="1">    
+    <li><a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank">Zenglin Xu</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://csr.swufe.edu.cn/info/1042/1672.htm" target="_blank">Bin Liu</a>, <a href="https://dblp.uni-trier.de/pers/hd/l/Li:Guangxi" target="_blank">Guangxi Li</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pers/hd/w/Wang:Yafang" target="_blank">Yafang Wang</a>, <a href="https://cprs.patentstar.com.cn/Search/Detail?ANE=7BEA9GEB9CICAEHA6FAA9EFAAFHAEHHA9BGGCGFADHFA6AEA"><strong><font color= "#00066f">A Method of Knowledge Base Completion by Variational Bayesian Neural Tensor Decomposition</font></strong></a> (No. ZL201610578882.9), 2018.09.04, China (Authorized)</li>
+
+    
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Yan Zhang, Peng Zhao, Ying Xie, Lu Wang, <a href="https://cprs.patentstar.com.cn/Search/Detail?ANE=9GBA8EEA9IHHAGFA9IHH9IGFFHIADIDAAHHA9GEB9FDA9FAE"><strong><font color= "#00066f">A Hierarchical Classification Method of Email Contents</font></strong></a> (No. ZL201610793018.0), 2019.03.15, China (Authorized)</li>
+
+</ol>
+
 </body></html>
