--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ Check out Sheng's up-to-date CV for more details.
 <p>
   <a href="https://jackietseng.github.io/conference_call_for_paper/conferences-with-ccf.html" target="_blank">2019-2020 International Conferences in Artificial Intelligence, Machine Learning, Computer Vision, Data Mining, Natural Language Processing and Robotics</a> |
   <a href="https://aideadlin.es/?sub=ML,CV,NLP,RO,SP,DM" target="_blank">AI Conference Deadlines</a> |
-  <a href="https://mp.weixin.qq.com/s/6HuuRyHETiSOn2JJGD3TuA" target="_blank">2021下半年会议论文投稿时间小结与历年接受率回顾（欢迎收藏）</a>
+  <a href="https://mp.weixin.qq.com/s/6HuuRyHETiSOn2JJGD3TuA" target="_blank">2021下半年会议论文投稿时间小结与历年接受率回顾（欢迎收藏）</a> |
+  <a href="https://zhuanlan.zhihu.com/p/371282122" target="_blank">NLP 2021-2022会议期刊整理</a>
   <br />
   <a href="https://mp.weixin.qq.com/s/mEDVpzN04Du869ntLNy4kw" target="_blank">国际顶尖人工智能会议汇总</a>
   |
