--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -150,6 +150,11 @@
     <a href="https://mp.weixin.qq.com/s/jpy7Ql6DDCf5zc4RE3melw" target="_blank">WWW2021 | 图机器学习论文一览</a>
     |
     <a href="https://mp.weixin.qq.com/s/FzyJoeYME2BBmLyHgnCtmg" target="_blank">SIGIR 2021 | 推荐系统相关论文分类整理</a>
+    <br />
+    <br />
+    <a href="https://mp.weixin.qq.com/s/EGs7x5K4v30aNNClP14tRg" target="_blank">ACL 2021 long paper list for Knowledge Graph</a>
+<!--     <br /> -->
+    |
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
     |
@@ -757,6 +762,9 @@
     <a href="https://lingyangchu.github.io/" target="_blank">Lingyang Chu</a> 
     |
     <a href="http://staff.ustc.edu.cn/~tongxu/" target="_blank">Tong Xu</a>
+    |
+<!-- Australia -->
+    <a href="https://shiruipan.github.io/" target="_blank">Shirui Pan</a>
     |
 <!-- Chinese Academy of Sciences-->
     <a href="http://www.bigdatalab.ac.cn/~jinxiaolong/" target="_blank">Xiaolong Jin</a>
