--- a/pages/news.html
+++ b/pages/news.html
@@ -70,7 +70,7 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
-      [2021/06/19]&nbsp;&nbsp; I successfully to be a teacher in the university with <a href="../certificate/" target="_blank">the Teacher Qualification Certificate (TQC)</a>.
+      [2021/06/19]&nbsp;&nbsp; I successfully to be a teacher in the university with <a href="../certificate/教师资格证书.pdf" target="_blank">the Teacher Qualification Certificate (TQC)</a>.
     </li>
     <li style="text-align:justify">
       [2021/06/10]&nbsp;&nbsp; I am invited as the reviewer of <a href="http://jcip.cipsc.org.cn/CN/volumn/home.shtml" target="_blank">Journal of Chinese Information Processing (JCIP)</a>. 
