--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -775,6 +775,9 @@
     |
     <a href="https://ngl567.github.io/" target="_blank">Guanglin Niu</a>
     |
+<!-- Zhejiang University-->
+    <a href="https://zxlzr.github.io/" target="_blank">Ningyu Zhang</a>
+    |
 <!-- Southeast University-->
     <a href="http://seu.wangmengsd.com/" target="_blank">Meng Wang</a>
     |
