--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -144,6 +144,8 @@
     |
     <a href="https://www.aclweb.org/anthology/events/naacl-2021/" target="_blank">NAACL</a>
     |
+    <a href="https://saner2021.shidler.hawaii.edu/accepted#research" target="_blank">SANER</a>
+    |
     <br/>
     <a href="https://github.com/naganandy/graph-based-deep-learning-literature/blob/master/conference-publications/folders/publications_webconf21/README.md#publications-in-the-web-conference-2021" target="_blank">Publications in The Web Conference 2021</a>
     |
