--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -162,6 +162,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/NKfyaZpRepK5fL6li62DUg" target="_blank">KDD2021 | 工业界搜推广nlp论文整理</a>
     |
+    <a href="https://mp.weixin.qq.com/s/IVKA0or3yR1QtrR724lNGg" target="_blank">ACL 2021 主会571篇长文分类汇总</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
