--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -164,6 +164,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/IVKA0or3yR1QtrR724lNGg" target="_blank">ACL 2021 主会571篇长文分类汇总</a>
     |
+    <a href="https://mp.weixin.qq.com/s/iMlV_LBoqwe2EU0fO4l68g" target="_blank">ACL2021奇葩标题大赏</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
