--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -146,6 +146,8 @@
     |
     <a href="https://saner2021.shidler.hawaii.edu/accepted#research" target="_blank">SANER</a>
     |
+    <a href="https://www.pakdd2021.org/Proceedings/proceeding" target="_blank">PAKDD [<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75762-5.pdf" target="_blank">Part I</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75765-6.pdf" target="_blank">Part II</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75768-7.pdf" target="_blank">Part III</a>]</a>
+    |
     <br/>
     <a href="https://github.com/naganandy/graph-based-deep-learning-literature/blob/master/conference-publications/folders/publications_webconf21/README.md#publications-in-the-web-conference-2021" target="_blank">Publications in The Web Conference 2021</a>
     |
@@ -165,6 +167,8 @@
     <a href="https://mp.weixin.qq.com/s/IVKA0or3yR1QtrR724lNGg" target="_blank">ACL 2021 主会571篇长文分类汇总</a>
     |
     <a href="https://mp.weixin.qq.com/s/PqsOIFmf2NKe7kFuPVwTpA" target="_blank">ACL2021 | 信息抽取相关论文</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/8qZwRSSSQiGsN1xcndqZyA" target="_blank">KDD2021 |时序图/动态图/时序图谱/时空图相关论文一览</a>
     |
     <a href="https://mp.weixin.qq.com/s/iMlV_LBoqwe2EU0fO4l68g" target="_blank">ACL2021奇葩标题大赏</a>
     |
