--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -138,9 +138,11 @@
     |
     <a href="https://openreview.net/group?id=ICLR.cc/2021/Conference" target="_blank">ICLR</a>
     |
+    <a href="https://auai.org/uai2021/accepted_papers" target="_blank">UAI</a>
+    |
     <a href="https://aamas2021.soton.ac.uk/programme/accepted-papers/" target="_blank">AAMAS</a>
     |
-    <a href="http://dm.iis.sinica.edu.tw/DASFAA2021/index.html" target="_blank">DASFAA</a>
+    <a href="http://dm.iis.sinica.edu.tw/DASFAA2021/index.html" target="_blank">DASFAA [<a href="https://link.springer.com/book/10.1007/978-3-030-73194-6" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-73197-7?page=1#toc" target="_blank">Part II</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-73200-4" target="_blank">Part III</a>]</a>
     |
     <a href="https://www.aclweb.org/anthology/events/naacl-2021/" target="_blank">NAACL</a>
     |
