--- a/pages/publications.html
+++ b/pages/publications.html
@@ -161,7 +161,7 @@ The 4th Asia Pacific Web and Web-Age Information Management Joint Conference on 
 
 <!-- 2020 International Conference on Progress in Informatics and Computing (<a href="http://www.picconf.com/"><strong><u><font color="#874e26">PIC-20</font></u></strong></a>). Shanghai, China, December 18-20 2020 (Under Review)</li>  -->
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a><sup>#</sup>, <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, and <a href="http://www.tjudb.cn/dbgroup/Xin_Wang_zh#.E5.AD.A6.E6.9C.AF.E8.AE.BA.E6.96.87" target="_blank">Xin Wang</a>, <a href="#"><strong><font color= "#00066f">A Hybrid Neural Network Model for Hypernym-hyponym Relation Identification</font></strong></a>. 
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a><sup>#</sup>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>,  <a href="#"><strong><font color= "#00066f">A Hybrid Neural Network Model for Hypernym-hyponym Relation Identification</font></strong></a>. 
 Information Sciences (<a href="https://www.journals.elsevier.com/information-sciences"><strong><u><font color="#874e26">IS</font></u></strong></a>). (IF = 5.910, CCF-B, JCR Q1, 中科院 Q1) (Under Review)</li>
 
 
