--- a/pages/publications.html
+++ b/pages/publications.html
@@ -128,7 +128,7 @@
 <!-- 2021 year -->
 <h4>2021</h4>
 <ol start="1">
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a><sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a><sup>#</sup>, and <a href="https://dblp.uni-trier.de/pers/hd/g/Gong:Jibing" target="_blank">Jibing Gong</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. (Under Review)
+    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="https://dblp.uni-trier.de/pers/hd/g/Gong:Jibing" target="_blank">Jibing Gong</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. (Under Review)
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li> 
  -->
 
@@ -143,10 +143,9 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. 
 Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
 
-<!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a><sup>#</sup>, Jiasheng Zhang, Xiaohong Zhang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> A Short Survey on Temporal Knowledge Graph Completion: Methods, Resources, and Research Directions</font></strong></a>.
-China Conference on Knowledge Graph and Semantic Computing 
- (<a href="http://sigkg.cn/ccks2020/"><strong><u><font color="#874e26">CCKS-20</font></u></strong></a>). Nanchang, China, November 12-15 2020 (Under Review)</li> 
- -->
+
+    <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font>, Shuang Liang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> EvoExplore: temporal knowledge graph representation learning via co-evolution modelling</font></strong></a>. (Under Review) 
+
 
 <!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, Jiasheng Zhang<sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Xiaohong Zhang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> TKBData: A Large-Scale Temporal Knowledge Base Dataset with Evaluation on State-of-the-Art Tasks</font></strong></a>.
 The 28th International Conference on Computational Linguistics (<a href="https://coling2020.org/"><strong><u><font color="#874e26">COLING-20</font></u></strong></a>). Barcelona, Spain, December 8-11 2019 (CCF: B) (To be Submitted)</li>  -->
