--- a/pages/publications.html
+++ b/pages/publications.html
@@ -144,7 +144,7 @@
 Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
 
 
-    <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font>, Shuang Liang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> EvoExplore: temporal knowledge graph representation learning via co-evolution modelling</font></strong></a>. (Under Review) 
+    <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Shuang Liang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> EvoExplore: temporal knowledge graph representation learning via co-evolution modelling</font></strong></a>. (Under Review) 
 
 
 <!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, Jiasheng Zhang<sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Xiaohong Zhang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> TKBData: A Large-Scale Temporal Knowledge Base Dataset with Evaluation on State-of-the-Art Tasks</font></strong></a>.
