--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Sheng's interest lies in <b>Textual Data Mining</b>, <b>Representation Learning 
 <br></p>
 
 <p>
-Sheng has published more than 15 papers in major international conferences including IJCAI, ECML-PKDD, APWeb-WAIM, and journals like WWW Journal, Cognitive Computation, Applied Intelligence. He has served as a PC member for many venues such as APWeb-WAIM (20/21), and a reviewer for venues such as APWeb-WAIM (19/20/21), RSBD (19), CCF-ICAI (18), AAAI (16), CCKS (16), CCPR (16) as well as journals such as Knowledge-Based Systems, Pattern Recognition Letters, IEEE Access, Journal of Computer Research and Development, Acta Electronica Sinica, etc.
+Sheng has published more than 20 papers in major international conferences including IJCAI, ECML-PKDD, APWeb-WAIM, and journals like Information Sciences, WWW Journal, Cognitive Computation, Applied Intelligence. He has served as a PC member for many venues such as APWeb-WAIM (20/21), and a reviewer for venues such as APWeb-WAIM (19/20/21), RSBD (19), CCF-ICAI (18), AAAI (16), CCKS (16), CCPR (16) as well as journals such as Knowledge-Based Systems, Pattern Recognition Letters, IEEE Access, Journal of Computer Research and Development, Acta Electronica Sinica, etc.
 <br></p>
 
 Check out Sheng's up-to-date CV for more details.
