--- a/pages/publications.html
+++ b/pages/publications.html
@@ -166,6 +166,9 @@ Information Sciences (<a href="https://www.journals.elsevier.com/information-sci
 
     <li><a href="https://dblp.uni-trier.de/pid/240/6876.html" target="_blank">Guanglin Niu</a>, <a href="http://scse.buaa.edu.cn/info/1078/5211.htm" target="_blank">Bo Li</a>, <a href="http://teacher.buaa.edu.cn/yfzhang/" target="_blank">Yongfei Zhang</a>*, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.shichuan.org/ShiChuan_ch.html" target="_blank">Chuan Shi</a>, Jingyang Li, and Shiliang Pu, <a href="https://arxiv.org/pdf/2010.02602.pdf"><strong><font color= "#00066f">Joint Semantics and Data-Driven Path Representation for Knowledge Graph Inference</font></strong></a>. 
 Knowledge-Based Systems (<a href="https://www.journals.elsevier.com/knowledge-based-systems/"><strong><u><font color="#874e26">KBS</font></u></strong></a>). (IF = 5.101, CCF-C, JCR Q1, 中科院 Q1) (Under Review)</li>
+
+
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CDFD&dbname=CDFDLAST2021&filename=1020354617.nh&v=oMy0dWvtjcXNyI6akpSHi6ok3oycZvF%25mmd2FjmzfZewldyCwyzhAnnfFpjzJFiCSS1oQ"><strong><font color= "#00066f">Research and Application of Learning Methods for Knowledge Graphs</font></strong></a>. (Doctoral Dissertation, In Chinese)</li>
 </ol>
 
 
