--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -150,6 +150,9 @@
     |
     <a href="https://www.pakdd2021.org/Proceedings/proceeding" target="_blank">PAKDD [<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75762-5.pdf" target="_blank">Part I</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75765-6.pdf" target="_blank">Part II</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75768-7.pdf" target="_blank">Part III</a>]</a>
     |
+    <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a>
+    |
+<!-- add more venue paper -->
     <br/>
     <a href="https://github.com/naganandy/graph-based-deep-learning-literature/blob/master/conference-publications/folders/publications_webconf21/README.md#publications-in-the-web-conference-2021" target="_blank">Publications in The Web Conference 2021</a>
     |
@@ -213,6 +216,8 @@
     <a href="https://www.aclweb.org/anthology/events/conll-2020/" target="_blank">CoNLL</a>
     |
     <a href="https://globecom2020.ieee-globecom.org/program/symposia-tuesday#S1569589391" target="_blank">GLOBECOM</a>
+    |
+    <a href="http://www.lrec-conf.org/proceedings/lrec2020/index.html" target="_blank">LREC</a>
     |
     <br />
     <br />
