--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -150,6 +150,8 @@
     |
     <a href="https://www.pakdd2021.org/Proceedings/proceeding" target="_blank">PAKDD [<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75762-5.pdf" target="_blank">Part I</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75765-6.pdf" target="_blank">Part II</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75768-7.pdf" target="_blank">Part III</a>]</a>
     |
+    <a href="https://aclanthology.org/events/naacl-2021/" target="_blank">NAACL (<a href="https://2021.naacl.org/program/" target="_blank">Conference Program</a>) </a>
+    |
     <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a>
     |
 <!-- add more venue paper -->
