--- a/pages/publications.html
+++ b/pages/publications.html
@@ -143,7 +143,7 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li>
+<!--     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li> -->
 
 
     <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Shuang Liang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> EvoExplore: temporal knowledge graph representation learning via co-evolution modelling</font></strong></a>. (Under Review) 
