--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -156,6 +156,8 @@
     |
     <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a>
     |
+    <a href="http://ceur-ws.org/" target="_blank">Doctoral Consortium</a>
+    |
 <!-- add more venue paper -->
     <br/>
     <a href="https://github.com/naganandy/graph-based-deep-learning-literature/blob/master/conference-publications/folders/publications_webconf21/README.md#publications-in-the-web-conference-2021" target="_blank">Publications in The Web Conference 2021</a>
@@ -195,7 +197,7 @@
     |
     <a href="https://sigir.org/sigir2020/accepted-papers/" target="_blank">SIGIR</a>
     |
-    ISWC [<a href="https://link.springer.com/book/10.1007/978-3-030-62419-4" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-62466-8" target="_blank">Part II</a>]
+    ISWC [<a href="https://link.springer.com/book/10.1007/978-3-030-62419-4" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-62466-8" target="_blank">Part II</a>][<a href="http://ceur-ws.org/Vol-2721/" target="_blank">Posters, Demos, and Industry Tracks</a>]
     |
     <a href="https://2020.emnlp.org/papers/main" target="_blank">EMNLP</a>
     |
