--- a/pages/publications.html
+++ b/pages/publications.html
@@ -170,7 +170,7 @@ Information Sciences (<a href="https://www.journals.elsevier.com/information-sci
 Knowledge-Based Systems (<a href="https://www.journals.elsevier.com/knowledge-based-systems/"><strong><u><font color="#874e26">KBS</font></u></strong></a>). (IF = 5.101, CCF-C, JCR Q1, 中科院 Q1) (Under Review)</li>
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CDFD&dbname=CDFDLAST2021&filename=1020354617.nh&v=oMy0dWvtjcXNyI6akpSHi6ok3oycZvF%25mmd2FjmzfZewldyCwyzhAnnfFpjzJFiCSS1oQ"><strong><font color= "#00066f">Research and Application of Learning Methods for Knowledge Graphs</font></strong></a> Chengdu: University of Electronic Science and Technology of China. (Doctoral Dissertation, In Chinese)</li>
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CDFD&dbname=CDFDLAST2021&filename=1020354617.nh&v=oMy0dWvtjcXNyI6akpSHi6ok3oycZvF%25mmd2FjmzfZewldyCwyzhAnnfFpjzJFiCSS1oQ"><strong><font color= "#00066f">Research and Application of Learning Methods for Knowledge Graphs</font></strong></a>, Chengdu: University of Electronic Science and Technology of China. (Doctoral Dissertation, In Chinese)</li>
 </ol>
 
 
