--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -156,6 +156,10 @@
     |
     <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a>
     |
+    <a href="https://iconip2021.apnns.org/" target="_blank">ICONIP</a>
+    |
+    <a href="http://139.159.245.147/program/proceedings" target="_blank">APWeb-WAIM</a>
+    |
     <a href="http://ceur-ws.org/" target="_blank">Doctoral Consortium</a>
     |
 <!-- add more venue paper -->
