--- a/pages/publications.html
+++ b/pages/publications.html
@@ -150,11 +150,11 @@
 
 
 
-    <li>Meng Chen, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>, and <a href="http://www.cse.cqu.edu.cn/info/2097/3519.htm" target="_blank">Qilin Fan</a>, <a href="#"><strong><font color= "#00066f"> Embedding Virtual Private Cloud in Data Centers with Switching Capability Constraint</font></strong></a>. (Under Review) 
+    <li><a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>, and <a href="http://www.cse.cqu.edu.cn/info/2097/3519.htm" target="_blank">Qilin Fan</a>, <a href="#"><strong><font color= "#00066f"> Embedding Virtual Private Cloud in Data Centers with Switching Capability Constraint</font></strong></a>. (Under Review) 
 
 
 
-    <li>Chunyan Liu, <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, Xiaoguang Mao, <a href="http://www.cse.cqu.edu.cn/info/2097/5325.htm" target="_blank">Zhou Xu</a>, <a href="#"><strong><font color= "#00066f">Review on Dynamic Fault Localization Methods for Machine Learning</font></strong></a>. (To be Submitted)</li>
+    <li>Chunyan Liu, <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, Xiaoguang Mao, and <a href="http://www.cse.cqu.edu.cn/info/2097/5325.htm" target="_blank">Zhou Xu</a>, <a href="#"><strong><font color= "#00066f">Review on Dynamic Fault Localization Methods for Machine Learning</font></strong></a>. (To be Submitted)</li>
 
 <!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, Jiasheng Zhang<sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Xiaohong Zhang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> TKBData: A Large-Scale Temporal Knowledge Base Dataset with Evaluation on State-of-the-Art Tasks</font></strong></a>.
 The 28th International Conference on Computational Linguistics (<a href="https://coling2020.org/"><strong><u><font color="#874e26">COLING-20</font></u></strong></a>). Barcelona, Spain, December 8-11 2019 (CCF: B) (To be Submitted)</li>  -->
