--- a/pages/publications.html
+++ b/pages/publications.html
@@ -150,7 +150,7 @@
 
 
 
-    <li><a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>, and <a href="http://www.cse.cqu.edu.cn/info/2097/3519.htm" target="_blank">Qilin Fan</a>, <a href="#"><strong><font color= "#00066f"> Embedding Virtual Private Cloud in Data Centers with Switching Capability Constraint</font></strong></a>. (Under Review) 
+    <li><a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/3519.htm" target="_blank">Qilin Fan</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/3500.htm" target="_blank">Sen Wang</a>, <a href="#"><strong><font color= "#00066f"> Embedding Virtual Private Cloud in Data Centers with Switching Capability Constraint</font></strong></a>. (Under Review) 
 
 
 
