--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -203,6 +203,10 @@
     |
     <a href="https://mp.weixin.qq.com/s/iMlV_LBoqwe2EU0fO4l68g" target="_blank">ACL2021奇葩标题大赏</a>
     |
+    <a href="https://baijiahao.baidu.com/s?id=1706949883933762034&wfr=spider&for=pc&sShare=1" target="_blank">NLP领域国际顶会ACL 2021收录结果公布 百度14篇论文上榜</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/srY9gMjhaJb38IMYsg6GRA" target="_blank">ACL 2021 | 今年NLP的这些论文，你不能错过！</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
