--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -585,7 +585,7 @@
     <a href="https://www.zhihu.com/question/24366306" target="_blank">国内有哪些自然语言处理的牛人或团队？</a>
 
 <br />
-     <a href="https://github.com/shengyp/top_nlp_teams/tree/gh-pages" target="_blank">顶尖的工业界NLP团队（主要有：达摩院NLP团队）</a> | <a href="https://mp.weixin.qq.com/s/e20lZZQCPVOeA4L5Ta3o7g" target="_blank">国内较强的NLP高校实验室有哪些？</a> | <a href="https://mp.weixin.qq.com/s?__biz=MzU2MjM2OTY2Mw==&mid=2247483746&idx=1&sn=f7a0eff36fccacccd355207b3f9e6453&chksm=fc6bc472cb1c4d64cab93cb5051054e3edba0d33465e2d0cfdcdb7d301eff74a7352da032dc2&token=1702490020&lang=zh_CN#rd" target="_blank">国内外知识图谱相关公司浅析</a> | <a href="https://mp.weixin.qq.com/s/zTn4W2YXIlxCff_Xi5a1JQ" target="_blank">选人工智能最强导师？建议你收藏这份名单</a>
+     <a href="https://github.com/shengyp/top_nlp_teams/tree/gh-pages" target="_blank">顶尖的工业界NLP团队（主要有：达摩院NLP团队）</a> | <a href="https://mp.weixin.qq.com/s/e20lZZQCPVOeA4L5Ta3o7g" target="_blank">国内较强的NLP高校实验室有哪些？</a> | <a href="https://mp.weixin.qq.com/s?__biz=MzU2MjM2OTY2Mw==&mid=2247483746&idx=1&sn=f7a0eff36fccacccd355207b3f9e6453&chksm=fc6bc472cb1c4d64cab93cb5051054e3edba0d33465e2d0cfdcdb7d301eff74a7352da032dc2&token=1702490020&lang=zh_CN#rd" target="_blank">国内外知识图谱相关公司浅析</a> | <a href="https://mp.weixin.qq.com/s/zTn4W2YXIlxCff_Xi5a1JQ" target="_blank">选人工智能最强导师？建议你收藏这份名单</a> | <a href="https://mp.weixin.qq.com/s/Rs2-B6Tq59jr1pSwgXLbcQ" target="_blank">知乎热议！2021大厂AI Lab现状盘点，网友：名存实亡</a>
 <br />
 <br />
 
@@ -833,6 +833,9 @@
     |
 <!-- Australia -->
     <a href="https://shiruipan.github.io/" target="_blank">Shirui Pan</a>
+    |
+<!-- HK -->
+    <a href="https://taoyds.github.io/" target="_blank">Tao Yu</a>
     |
 <!-- Chinese Academy of Sciences, -->
     <a href="http://www.bigdatalab.ac.cn/~jinxiaolong/" target="_blank">Xiaolong Jin</a>
