--- a/pages/publications.html
+++ b/pages/publications.html
@@ -140,7 +140,7 @@
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li>  -->
 
 
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, <strong><font color= "#00066f">A Systematical Study on Dynamic Software Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li>
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>*, <strong><font color= "#00066f">A Systematical Study on Dynamic Software Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li>
 
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
