--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -805,8 +805,10 @@
 
     Younger Scientists:
 
-  <br />
+<br />
 <!--   <br /> -->
+In the NLP/KG field, including
+<br />
 <!-- MSR -->
     <a href="https://www.microsoft.com/en-us/research/people/fangzwu/" target="_blank">Fangzhao Wu</a> 
     |
@@ -884,6 +886,11 @@
     |
     <a href="https://xin-xia.github.io/" target="_blank">Xin Xia</a>
     |
+  <br />
+In the SE field, including
+<br />
+    <a href="https://liuhuigmail.github.io/" target="_blank">Hui Liu</a>
+    |    
   <br />
   <br />
 </body></html>
