--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -803,11 +803,11 @@
   <br />
   <br />
 
-    Younger Scientists:
+【Younger Scientists】
 
 <br />
 <!--   <br /> -->
-In the NLP/KG field, including
+NLP/KG field：
 <br />
 <!-- MSR -->
     <a href="https://www.microsoft.com/en-us/research/people/fangzwu/" target="_blank">Fangzhao Wu</a> 
@@ -887,7 +887,8 @@ In the NLP/KG field, including
     <a href="https://xin-xia.github.io/" target="_blank">Xin Xia</a>
     |
   <br />
-In the SE field, including
+  <br />
+SE field：
 <br />
     <a href="https://liuhuigmail.github.io/" target="_blank">Hui Liu</a>
     |    
