--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -212,6 +212,8 @@
     |
     <a href="https://www.toutiao.com/i6992857338701038093/?tt_from=weixin&utm_campaign=client_share&wxshare_count=1&timestamp=1628239873&app=news_article&utm_source=weixin&utm_medium=toutiao_android&use_new_style=1&req_id=202108061651130101510781485600D56F&share_token=3edea48b-ad9f-4ed1-b7ad-87161c4e95d0&group_id=6992857338701038093" target="_blank">腾讯50余篇论文入选NLP顶会ACL 腾讯AI Lab解读两项NLP成果</a>
     |
+    <a href="https://mp.weixin.qq.com/s/S3xMO6HP06es65cy0cd3bg" target="_blank">THUIR师生论文获CIKM2021录用</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
