--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -580,6 +580,7 @@
     <a href="http://www.techkg.cn/#ailayouts" target="_blank">Knowledge Graph Research Group, Northeastern University</a> |
 <!--  <br /> -->
     <a href="http://nlp.nju.edu.cn/homepage/" target="_blank">NLP Group, Nanjing University</a> | 
+    <a href="http://nlp.nju.edu.cn/homepage/" target="_blank">Learning And Mining from DatA (LAMDA), Nanjing University</a> |     
 <!--   <br /> -->
     <a href="http://nlp.xmu.edu.cn/" target="_blank">NLP Lab, Xiamen University</a> | <a href="http://ir.dlut.edu.cn/" target="_blank">DUTIR</a> |
 <!--  <br /> -->
@@ -900,7 +901,9 @@ NLP/KG field：
 SE field：
 <br />
     <a href="https://liuhuigmail.github.io/" target="_blank">Hui Liu</a>
-    |    
+    |
+    <a href="http://www.lamda.nju.edu.cn/lim/" target="_blank">Ming Li</a>
+    |       
   <br />
   <br />
 </body></html>
