--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -562,7 +562,7 @@
     <a href="https://www.baai.ac.cn/" target="_blank">Beijing Academy of Artificial Intelligence</a> |
     <a href="http://www.thuir.cn/" target="_blank">Information Retrieval Group, Tsinghua University</a> | 
 <!--   <br /> -->
-    <a href="http://coai.cs.tsinghua.edu.cn/" target="_blank">CoAI</a>|
+    <a href="http://coai.cs.tsinghua.edu.cn/" target="_blank">CoAI</a> |
   <!-- <br /> -->
     <a href="http://www.klcl.pku.edu.cn/" target="_blank">KLCL, Peking University</a> 
     | 
@@ -848,11 +848,16 @@ NLP/KG field：
 <!-- Australia -->
     <a href="https://shiruipan.github.io/" target="_blank">Shirui Pan</a>
     |
+<!-- Singapore -->
+    <a href="https://siqiangluo.wixsite.com/homepage" target="_blank">Siqiang Luo</a>
+    |
 <!-- HK -->
     <a href="https://taoyds.github.io/" target="_blank">Tao Yu</a>
     |
 <!-- Chinese Academy of Sciences, -->
     <a href="http://www.bigdatalab.ac.cn/~jinxiaolong/" target="_blank">Xiaolong Jin</a>
+    |
+    <a href="http://www.bigdatalab.ac.cn/~zhangruqing/" target="_blank">Ruqing Zhang</a>
     |
 <!-- Institute of Automation, Chinese Academy of Sciences -->
     Yubo Chen <a href="http://www.nlpr.ia.ac.cn/cip/yubochen/index.html" target="_blank">(En)</a> <a href="http://www.nlpr.ia.ac.cn/cip/yubochen/index_cn.html" target="_blank">(Cn)</a>
