--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -212,6 +212,10 @@
     |
     <a href="https://www.toutiao.com/i6992857338701038093/?tt_from=weixin&utm_campaign=client_share&wxshare_count=1&timestamp=1628239873&app=news_article&utm_source=weixin&utm_medium=toutiao_android&use_new_style=1&req_id=202108061651130101510781485600D56F&share_token=3edea48b-ad9f-4ed1-b7ad-87161c4e95d0&group_id=6992857338701038093" target="_blank">腾讯50余篇论文入选NLP顶会ACL 腾讯AI Lab解读两项NLP成果</a>
     |
+    <a href="https://mp.weixin.qq.com/s/RhcHvRWHRnYUg6u9vXoIGA" target="_blank">从ACL 2021中看NLP在医疗领域应用的发展，附资源下载</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/gNXQdZFFO_uoGR43rVmW6Q" target="_blank">KDD2021 |时序图/动态图/时序图谱/时空图相关论文一览</a>
+    |
     <a href="https://mp.weixin.qq.com/s/S3xMO6HP06es65cy0cd3bg" target="_blank">THUIR师生论文获CIKM2021录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/q2nuRfZqE4ptjKAt90NDTw" target="_blank">快讯｜北邮GAMMA Lab的四篇工作被CIKM 2021接收</a>
