--- a/pages/activities.html
+++ b/pages/activities.html
@@ -136,7 +136,10 @@
 
     <li><strong>Invited Reviewer</strong>, Acta Electronica Sinica (<a href="http://www.ejournal.org.cn/"><strong><u><font color="#874e26">AES</font></u></strong></a>)</li>
 
-    
+
+    <li><strong>Invited Reviewer</strong>, Journal of China Information Processing (<a href="http://jcip.cipsc.org.cn/CN/volumn/home.shtml"><strong><u><font color="#874e26">JCIP</font></u></strong></a>)</li>
+
+
     <li><strong>Invited Reviewer</strong>, Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">CS</font></u></strong></a>)</li>
 
 
