--- a/pages/news.html
+++ b/pages/news.html
@@ -91,7 +91,7 @@
       [2021/02]&nbsp;&nbsp; I am invited to become a Program Committee Member of <a href="http://139.159.245.147/" target="_blank">APWeb-WAIM 2021</a>.
     </li>
     <li style="text-align:justify">
-      [2020/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教师培训证书_2020.09.19.pdf" target="_blank">the teacher training completion certificate of information technology for the new engineering</a> provided by China Software Industry Association Training Center
+      [2020/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教师培训证书_2020.09.19.pdf" target="_blank">the teaching certificate of information technology in the new engineering</a> provided by China Software Industry Association Training Center
     </li>
     <li style="text-align:justify">
       [2020/07/16]&nbsp;&nbsp; I successfully defended my dissertation entitled "Research and Application of Learning Methods for Knowledge Graphs" and will ready to move on a new start.
