--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -175,6 +175,8 @@
     |
     <a href="https://aclanthology.org/events/naacl-2021/" target="_blank">NAACL (<a href="https://2021.naacl.org/program/" target="_blank">Conference Program</a>) </a>
     |
+    <a href="https://link.springer.com/book/10.1007/978-3-030-82153-1?page=1#toc" target="_blank">KSEM</a>
+    |
     <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a>
     |
     <a href="https://iconip2021.apnns.org/" target="_blank">ICONIP</a>
