--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -185,6 +185,8 @@
     |
     <a href="http://www.cips-cl.org/static/CCL2021/index.html" target="_blank">CCL</a>
     |
+    <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a>
+    |
     <a href="http://ceur-ws.org/" target="_blank">Doctoral Consortium</a>
     |
 <!-- add more venue paper -->
@@ -227,6 +229,8 @@
     <a href="https://mp.weixin.qq.com/s/S3xMO6HP06es65cy0cd3bg" target="_blank">THUIR师生论文获CIKM2021录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/q2nuRfZqE4ptjKAt90NDTw" target="_blank">快讯｜北邮GAMMA Lab的四篇工作被CIKM 2021接收</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/KvdVjzgnVOWy5Wd0hxHAgQ" target="_blank">从技术到科学，中国AI向何处去？</a>
     |
 <!--     <br /> -->   
 <h4>2020</h4>
