--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -181,6 +181,8 @@
     |
     <a href="https://iconip2021.apnns.org/" target="_blank">ICONIP</a>
     |
+    <a href="https://globecom2021.ieee-globecom.org/" target="_blank">GLOBECOM</a>
+    |
     <a href="http://139.159.245.147/program/proceedings" target="_blank">APWeb-WAIM</a>
     |
     <a href="http://www.cips-cl.org/static/CCL2021/index.html" target="_blank">CCL</a>
