--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -448,6 +448,26 @@
 <br />
 <br />
 
+
+<hr align="left" width="100%">
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">Deep设备选型</h3>
+
+<br />
+
+    <a href="https://mp.weixin.qq.com/s/q8s9Ol3S-fHuQuoSB_0EbA" target="_blank">科普帖：深度学习中GPU和显存分析</a>
+    |
+
+
+<!--   <br /> -->
+
+<br />
+<br />
+
 <hr align="left" width="100%">
 
 <h3 style="
