--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -234,6 +234,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/hBdj-YiJfCIG9KmsspXNdg" target="_blank">IJCAI 2021 | 一文了解微软亚洲研究院机器学习方向前沿进展</a>
     |
+    <a href="https://mp.weixin.qq.com/s/07gtp2vCGtVixYxtzG-ajw" target="_blank">“知识图谱”七连击，来自阿里、百度、腾讯、丁香园等热门应用都在这里</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
