--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -189,6 +189,8 @@
     |
     <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a>
     |
+    <a href="http://icbk2021.zhonghuapu.com/call/" target="_blank">ICBK</a>
+    |
     <a href="http://ceur-ws.org/" target="_blank">Doctoral Consortium</a>
     |
 <!-- add more venue paper -->
@@ -235,6 +237,8 @@
     <a href="https://mp.weixin.qq.com/s/hBdj-YiJfCIG9KmsspXNdg" target="_blank">IJCAI 2021 | 一文了解微软亚洲研究院机器学习方向前沿进展</a>
     |
     <a href="https://mp.weixin.qq.com/s/07gtp2vCGtVixYxtzG-ajw" target="_blank">“知识图谱”七连击，来自阿里、百度、腾讯、丁香园等热门应用都在这里</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/gr917UL7lK4gA7KWZpWJMg" target="_blank">哈工大SCIR 6篇主会/2篇Findings/1篇Demo 共9篇长文被EMNLP 2021录用</a>
     |
 <!--     <br /> -->   
 <h4>2020</h4>
@@ -390,6 +394,8 @@
     |
     <a href="http://www.ccks2019.cn/?page_id=49" target="_blank">CCKS</a>
     |
+    <a href="http://39.104.72.142/icbk2019/session-details.html" target="_blank">ICBK</a>
+    |
     <br />
     <br />
     <a href="https://github.com/yizhen20133868/NLP-Conferences-Code" target="_blank">Code for ACL 2019/2020 & NAACL 2019 & EMNLP 2019</a>
@@ -434,6 +440,8 @@
     <a href="https://www.ecir2018.org/ecir-proceedings/" target="_blank">ECIR</a>
     |
     <a href="http://wise2018.connect.rs/" target="_blank">WISE</a>
+    |
+    <a href="http://web.science.mq.edu.au/~jiawu/ICBK/program.html" target="_blank">ICBK</a>
     |
     <br />
     <br />
