--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -459,6 +459,7 @@
 <br />
 
 
+<!-- Deep设备选型 -->
 <hr align="left" width="100%">
 
 <h3 style="
@@ -477,6 +478,29 @@
 
 <br />
 <br />
+
+
+<!-- 开发配置管理 -->
+
+<hr align="left" width="100%">
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">Deep设备选型</h3>
+
+<br />
+
+    <a href="https://mp.weixin.qq.com/s/aACazMGEIkUHRnLADltGwg" target="_blank">10秒！GitHub工程团队转移到Codespaces，开发环境「即开即用」</a>
+    |
+
+
+<!--   <br /> -->
+
+<br />
+<br />
+
 
 <hr align="left" width="100%">
 
