--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -494,8 +494,10 @@
 
     <a href="https://mp.weixin.qq.com/s/aACazMGEIkUHRnLADltGwg" target="_blank">10秒！GitHub工程团队转移到Codespaces，开发环境「即开即用」</a>
     |
-
-
+    <a href="https://mp.weixin.qq.com/s/9sXeG3wVdiigKrXGycHe1g" target="_blank">Jupyter Notebook 的那些高效率操作</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/eYrlhATeB-SiP7qyEfXzJg" target="_blank">JupyterLab 3.0，极其强大的下一代 notebook！</a>
+    |
 <!--   <br /> -->
 
 <br />
