--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -240,6 +240,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/gr917UL7lK4gA7KWZpWJMg" target="_blank">哈工大SCIR 6篇主会/2篇Findings/1篇Demo 共9篇长文被EMNLP 2021录用</a>
     |
+    <a href="https://mp.weixin.qq.com/s/NmPRuA0GZWk0JkPaP28fRQ" target="_blank">18篇近期值得关注的Transformer工作</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
