--- a/pages/publications.html
+++ b/pages/publications.html
@@ -148,7 +148,7 @@
 <!--     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li> -->
 
 
-    <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Shuang Liang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> EvoExplore: temporal knowledge graph representation learning via co-evolution modelling</font></strong></a>. (Under Review)</li> 
+    <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Shuang Liang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> EvoExplore: temporal knowledge graph representation learning via co-evolution modeling</font></strong></a>. (Under Review)</li> 
 
 
 
