--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -278,6 +278,8 @@
     |
     <a href="https://conf.researchr.org/track/ase-2020/ase-2020-papers?track=ASE%20Research%20Papers#event-overview" target="_blank">ASE</a>
     |
+    <a href="https://link.springer.com/conference/nlpcc" target="_blank">NLPCC</a>
+    |
     <a href="https://iconip2020.apnns.org/#[object%20Object]" target="_blank">ICONIP</a>
     |
     <a href="http://ksem2020.org/program.html" target="_blank">KSEM</a>
