--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -148,7 +148,7 @@
     |
     <a href="https://sigir.org/sigir2021/accepted-papers/" target="_blank">SigIR</a>
     |
-    <a href="https://ijcai-21.org/" target="_blank">IJCAI</a>
+    <a href="https://www.ijcai.org/proceedings/2021/" target="_blank">IJCAI</a>
     |
     <a href="https://openreview.net/group?id=ICLR.cc/2021/Conference" target="_blank">ICLR</a>
     |
@@ -241,6 +241,8 @@
     <a href="https://mp.weixin.qq.com/s/gr917UL7lK4gA7KWZpWJMg" target="_blank">哈工大SCIR 6篇主会/2篇Findings/1篇Demo 共9篇长文被EMNLP 2021录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/NmPRuA0GZWk0JkPaP28fRQ" target="_blank">18篇近期值得关注的Transformer工作</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/yPGMa3mNZsp3qXbRp8hvuQ" target="_blank">今日arXiv精选 | 14篇EMNLP 2021最新论文</a>
     |
 <!--     <br /> -->   
 <h4>2020</h4>
@@ -484,6 +486,27 @@
 <br />
 
 
+<!-- Deep model -->
+<hr align="left" width="100%">
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">Deep model调参与优化</h3>
+
+<br />
+
+    <a href="https://mp.weixin.qq.com/s/6OkobO8Y7TELa1QAki18RA" target="_blank">FAIR研究员：重新思考BatchNorm中的"Batch"</a>
+    |
+
+
+<!--   <br /> -->
+
+<br />
+<br />
+
+
 <!-- 开发配置管理 -->
 
 <hr align="left" width="100%">
@@ -492,7 +515,7 @@
     color: #0084f2;
     padding-left: 5px;
     margin: 30px 0 5px;
-    border-left: 5px solid #0084f2;">Deep设备选型</h3>
+    border-left: 5px solid #0084f2;">配置管理</h3>
 
 <br />
 
