--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Yongpan Sheng currently a Research Assistant at <a href="http://www.cse.cqu.edu.
 
 <p>
 <!-- Knowledge Extraction and Structured Embeddings from Unstructured Data -->
-Sheng's interest lies in <b>Textual Data Mining</b>, <b>Representation Learning for Knowledge Graphs</b>, and <b>Domain-Specific Knowledge Graph Construction</b>. He has worked on a variety of related tasks including knowledge mining based upon open-domain extraction, domain-specific knowledge graph construction from from semi-structured and unstructured data, representation learning for temporal knowledge graphs. His recent work also includes a series of novel and effective algorithms developed for open-domain knowledge extraction from texts, and representation learning for graph neural networks.  
+Sheng's interest lies in <b>Textual Data Mining</b>, <b>Representation Learning for Knowledge Graphs</b>, and <b>Domain-Specific Knowledge Graph Construction</b>. He has worked on a variety of related tasks including knowledge mining based upon open-domain extraction, domain-specific knowledge graph construction from semi-structured and unstructured data, representation learning for temporal knowledge graphs. His recent work also includes a series of novel and effective algorithms developed for open-domain knowledge extraction from texts, and representation learning for graph neural networks.  
 <br></p>
 
 <p>
